--- a/public/janus.html
+++ b/public/janus.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Realistic avatars — Networked-Aframe</title>
-    <meta name="description" content="Realistic avatars — Networked-Aframe" />
+    <title>AR-Room</title>
+    <meta name="description" content="AR-Room" />
 
     <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
 
