--- a/public/scene2.html
+++ b/public/scene2.html
@@ -66,7 +66,7 @@
       <a-entity id="bab2" visible="false">
         <a-entity
           id="myModel"
-          gltf-model="url(bab2.glb)"
+          gltf-model="url(assets/bab2.glb)"
           position="0 0.6 -3"
           rotation="0 -90 0"
           scale="0.5 0.5 0.5"
