--- a/public/scene2.html
+++ b/public/scene2.html
@@ -8,6 +8,22 @@
   </head>
   <body>
     <a-scene background="color: #1a1a1a">
+      <a-assets>
+        <img id="thumbScene1" src="https://cdn.aframe.io/link-traversal/thumbs/forest.png" crossorigin="anonymous">
+      </a-assets>
+      <!-- Portal back to index.html -->
+      <a-link
+        position="0 1.6 3"
+        rotation="0 180 0"
+        href="index.html"
+        title="Kembali ke Lobi"
+        image="#thumbScene1"
+        class="clickable"
+        event-set__mouseenter="material.opacity: 0.8"
+        event-set__mouseleave="material.opacity: 0.6"
+      >
+        <a-box position="0 0 0.5" obb-collider visible="false"></a-box>
+      </a-link>
       <!-- Kamera dengan gaze cursor -->
       <a-entity camera look-controls position="0 1.6 0">
         <a-entity
