--- a/public/scene1.html
+++ b/public/scene1.html
@@ -5,7 +5,7 @@
     <title>AR-Room</title>
     <meta name="description" content="AR          <!-- Arrow indicator for sepeda -->
           <a-entity id="sepeda-arrow" 
-            gltf-model="url(assets/Orange Arrow.glb)"
+            gltf-model="url(assets/arrow.glb)"
             position="0 2.5 0" 
             rotation="0 0 0"
             scale="0.5 0.5 0.5"
@@ -107,7 +107,7 @@
           <a-entity id="ferrari" gltf-model="url(assets/ferrari.glb)" position="0 0 0" scale="1 1 1"></a-entity>
           <!-- Arrow indicator for car -->
           <a-entity id="car-arrow" 
-            gltf-model="url(assets/Orange Arrow.glb)"
+            gltf-model="url(assets/arrow.glb)"
             position="0 2.5 0" 
             rotation="0 0 0"
             scale="0.5 0.5 0.5"
