--- a/public/scene2.html
+++ b/public/scene2.html
@@ -619,7 +619,7 @@
         
         // Coba load model bab2.glb
         const bab2Model = document.createElement('a-entity');
-        bab2Model.setAttribute('gltf-model', 'assets/bab2.glb');
+        bab2Model.setAttribute('gltf-model', 'assets/balok.glb');
         bab2Model.setAttribute('position', '0 0 0');
         bab2Model.setAttribute('scale', '1 1 1');
         bab2Model.setAttribute('material', 'depthTest: true');
