--- a/public/scene1.html
+++ b/public/scene1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>AR-Room</title>
-    <meta name="description" content="AR          <!-- Arrow indicator for sepeda -->
+    <meta name="description" content="AR">
           <a-entity id="sepeda-arrow" 
             gltf-model="url(assets/arrow.glb)"
             position="0 2.5 0" 
