--- a/public/scene1.html
+++ b/public/scene1.html
@@ -128,6 +128,17 @@
             width="8"
             visible="false">
           </a-text>
+
+          <!-- NPC for punching animation, child of car-group -->
+          <a-entity 
+            id="npc-puncher" 
+            gltf-model="url(assets/third_person_animations.glb)" 
+            position="0 0 2.5" 
+            rotation="0 180 0" 
+            scale="1 1 1" 
+            visible="false"
+            animation-mixer>
+          </a-entity>
         </a-entity>
 
         <!-- Sepeda model with collision -->
@@ -145,7 +156,13 @@
             visible="false"
           ></a-box>
           <!-- Visual model for the bicycle -->
-          <a-entity id="sepeda" gltf-model="url(assets/sepeda.glb)" scale="0.5 0.5 0.5"></a-entity>
+          <a-entity 
+            id="sepeda" 
+            gltf-model="url(assets/sepeda.glb)" 
+            scale="0.5 0.5 0.5"
+            rotation="0 180 0"
+            animation-mixer="clip: Static Pose; loop: infinite">
+          </a-entity>
           <!-- Arrow indicator for sepeda -->
           <a-entity id="sepeda-arrow" 
             gltf-model="url(assets/arrow.glb)"
@@ -989,6 +1006,30 @@
           if (this.distanceTraveled >= this.targetDistance || this.velocity.length() < 0.01) {
             this.isMoving = false;
             this.velocity.set(0, 0, 0);
+
+            // --- HIDE NPC WHEN CAR STOPS ---
+            if (this.el.id === 'ferrari-body') {
+              const npc = document.getElementById('npc-puncher');
+              if (npc) {
+                console.log('Car stopped. Hiding NPC.');
+                npc.setAttribute('visible', false);
+                const mixer = npc.components['animation-mixer'];
+                if (mixer && mixer.activeAction) {
+                  mixer.stopAction();
+                }
+              }
+            }
+            // --- END HIDE NPC ---
+
+            // --- RESET BICYCLE ANIMATION WHEN IT STOPS ---
+            if (this.el.id === 'sepeda-body') {
+              const sepeda = document.getElementById('sepeda');
+              if (sepeda) {
+                sepeda.setAttribute('animation-mixer', 'clip', 'Static Pose');
+              }
+            }
+            // --- END RESET BICYCLE ANIMATION ---
+
             // Keep acceleration and distance data for display until manual reset
             console.log(`${this.el.id} stopped. Distance traveled: ${this.distanceTraveled}`);
             console.log(`Final acceleration was: ${this.acceleration.length()}`);
@@ -1159,6 +1200,18 @@
         applyForce() {
           console.log(`Applying 3D force: ${this.forceValue}N, Distance: ${this.distanceValue}m`);
 
+          // --- NPC ANIMATION ---
+          const npc = document.getElementById('npc-puncher');
+          if (npc) {
+            console.log('NPC appearing and starting to walk.');
+            npc.setAttribute('visible', true);
+            npc.setAttribute('animation-mixer', {
+              clip: 'Walk',
+              loop: 'infinite' // Loop until car stops
+            });
+          }
+          // --- END NPC ANIMATION ---
+
           // Apply force to car (backward direction)
           const carBody = document.getElementById('ferrari-body');
           if (carBody && carBody.components && carBody.components['physics-object']) {
@@ -1175,6 +1228,14 @@
             const bicycleForce = new THREE.Vector3(0, 0, this.forceValue * 50);
             bicycleBody.components['physics-object'].applyForce(bicycleForce, this.distanceValue);
             console.log('3D Force applied to bicycle');
+
+            // --- CHANGE BICYCLE ANIMATION ---
+            const sepeda = document.getElementById('sepeda');
+            if (sepeda) {
+              sepeda.setAttribute('animation-mixer', 'clip', 'M_rig_Action_S');
+            }
+            // --- END CHANGE BICYCLE ANIMATION ---
+
           } else {
             console.error('Bicycle physics object not found');
           }
